--- a/client-side/src/app/app.component.html
+++ b/client-side/src/app/app.component.html
@@ -38,7 +38,7 @@
       
           <!-- Socials -->
           <div class="socials p-1">
-            <p>Follow Us on Social Media!</p>
+            <p>FOLLOW US ON SOCIAL MEDIA</p>
             <div class="social-icons p-2">
               <!-- Facebook -->
               <div> <i class="fa-brands fa-facebook fa-2x"></i>  @steamvault</div>
@@ -80,14 +80,14 @@
 </div>
 
 <div class="widget-bar">
-      <div><a routerLink="/shop"><img [src]="math" class="widget"></a>
-      <p>Shop</p>
+      <div><a routerLink="/shop"><img [src]="math" class="widget">
+      <p>Shop</p></a>
       </div>
     <div><img [src]="science" class="widget">
       <p>Blog</p>
     </div>
-    <div><img [src]="tech" class="widget">
-      <p>Tech Tips</p>
+    <div><a routerLink="/about"><img [src]="tech" class="widget">
+      <p>Contact</p></a>
     </div>
 </div>
 <hr>
@@ -98,7 +98,7 @@
 
 <footer class="text-center text-lg-start text-dark" style="background-color: white">
   <!-- Section: Social media -->
-  <section class="d-flex justify-content-between p-4 text-black" style="background-color: #FBB0AE">
+  <section class="d-flex justify-content-between p-4 text-black text-white" style="background-color: #004AAD">
     <!-- Left -->
     <div class="me-5">
       <span>Get connected with us on social networks:</span>
@@ -186,7 +186,7 @@
   <!-- Section: Links  -->
 
   <!-- Copyright -->
-  <div class="text-center p-3" style="background-color: #FBB0AE">
+  <div class="text-center p-3 text-white" style="background-color: #004AAD">
     © 2023 Copyright: STEAM Vault
   </div>
   <!-- Copyright -->
