--- a/client-side/src/app/components/product/product.component.html
+++ b/client-side/src/app/components/product/product.component.html
@@ -1,44 +1,7 @@
 <div>
   <div class="row my-4 text-center product-container">
     <!-- Carousel on the Right of Product Image -->
-    <!-- <div class="carousel-container col-4 offset-3">
-      <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-      <div id="carouselExampleIndicators" class="carousel slide">
-        <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
-            aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-            aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-            aria-label="Slide 3"></button>
-        </div>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="{{product.cover}}" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="{{product.preview1}}" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="{{product.preview2}}" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="{{product.preview3}}" class="d-block w-100" alt="...">
-          </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-          data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-          data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
-      </div>
-      </div>
-    </div> -->
+  
     <div class="carousel-container col-6 mt-4">
     <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
@@ -83,7 +46,7 @@
       </div>
       
      
-      <p>{{product.description_short}}</p>
+      <p class="mt-4 product-desc">{{product.description_short}}</p>
       
       <!-- More Details Below -->
       <div class="accordion accordion-flush" id="accordionFlushExample">
@@ -104,7 +67,18 @@
             </button>
           </h2>
           <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-            <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual content.</div>
+            <div class="accordion-body"><p>Please do not distribute copies without purchasing additional licenses. </p><br>
+              <p>You may</p>
+              <ul>
+                <li>Use materials during classroom instruction and online learning platforms</li>
+              </ul>
+              <p>You may not:</p>
+              <ul>
+                <li>Distribute materials online to others</li>
+                <li>Use materials outside of classroom instructions</li>
+                <li>Use materials for commercial use.</li>
+              </ul>
+            </div>
           </div>
         </div>
       </div><br>
