--- a/client-side/src/app/components/home/home.component.html
+++ b/client-side/src/app/components/home/home.component.html
@@ -52,13 +52,13 @@
     <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="/assets/hero1.png" class="d-block w-100" alt="...">
+          <img src="/assets/hero1.png" class="d-block w-100 img-fluid" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="/assets/2.png" class="d-block w-100" alt="...">
+          <img src="/assets/2.png" class="d-block w-100 img-fluid" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="/assets/hero3.png" class="d-block w-100" alt="...">
+          <img src="/assets/hero3.png" class="d-block w-100 img-fluid" alt="...">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
@@ -85,16 +85,16 @@
           <div class="bestseller-info p-4 row ">
             <h4 class="text-center mb-4">Get {{salePercent}} off our back to school favourites!</h4>
             <!-- Preview 1 -->
-            <div class="flex-container col-4">
-              <a href="https://www.teacherspayteachers.com/Product/Middle-School-Back-to-School-Math-Activities-8320756" target="_blank"><img [src]="BTS1" class="product-img"></a>
+            <div class="flex-container col-lg-4 col-sm-12 mb-3">
+              <a href="https://www.teacherspayteachers.com/Product/Middle-School-Back-to-School-Math-Activities-8320756" target="_blank"><img [src]="BTS1" class="product-img img-fluid"></a>
             </div>
             <!-- Preview 2 -->
-            <div class="flex-container col-4">
-              <a href="https://www.teacherspayteachers.com/Product/Decimal-Math-Reading-and-Ordering-from-a-Menu-Print-Digital-5887501" target="_blank"><img [src]="BTS2" class=" product-img"></a>
+            <div class="flex-container col-lg-4 col-sm-12 mb-3">
+              <a href="https://www.teacherspayteachers.com/Product/Decimal-Math-Reading-and-Ordering-from-a-Menu-Print-Digital-5887501" target="_blank"><img [src]="BTS2" class=" product-img img-fluid"></a>
             </div>
             <!-- Preview 3 -->
-            <div class="flex-container col-4">
-              <a href="https://www.teacherspayteachers.com/Product/Calculating-Percent-in-the-Stock-Market-8556890" target="_blank"><img [src]="BTS3" class="product-img"></a>
+            <div class="flex-container col-lg-4 col-sm-12 mb-3">
+              <a href="https://www.teacherspayteachers.com/Product/Calculating-Percent-in-the-Stock-Market-8556890" target="_blank"><img [src]="BTS3" class="product-img img-fluid"></a>
             </div>
 
 
@@ -148,16 +148,16 @@
           <h3 class="p-2 text-white">Shop Our Products</h3>
           <div class="product-info p-4 row ">
             <!-- Preview 1 -->
-            <div class="flex-container col-4">
-              <img [src]="product1" class="product-img">
+            <div class="flex-container col-lg-4 col-sm-12 mb-3">
+              <img [src]="product1" class="product-img img-fluid">
             </div>
             <!-- Preview 2 -->
-            <div class="flex-container col-4">
-              <img [src]="product2" class=" product-img">
+            <div class="flex-container col-lg-4 col-sm-12 mb-3">
+              <img [src]="product2" class=" product-img img-fluid">
             </div>
             <!-- Preview 3 -->
-            <div class="flex-container col-4">
-              <img [src]="product3" class="product-img">
+            <div class="flex-container col-lg-4 col-sm-12 mb-3">
+              <img [src]="product3" class="product-img img-fluid">
             </div>
             <div class="flex-container">
               <button type="button" class="btn btn-warning mx-4 mt-5" routerLink="/shop">VIEW ALL
