--- a/client-side/src/app/app.component.html
+++ b/client-side/src/app/app.component.html
@@ -3,8 +3,8 @@
 
   <!-- SideNav -->
   <div class="col-1">
-    <div class="top-bar">
-      <button class="btn px-5" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample"
+    <div class="top-bar p-4">
+      <button class="btn p-4" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample"
         aria-controls="offcanvasExample">
         <i class="fa-solid fa-bars fa-2x"></i></button>
 
